@@ -1,0 +1,10 @@
+<?php
+/** Tigre (ትግሬ)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Amir E. Aharoni
+ */
+
+$linkTrail = "/^([a-z\x{1200}-\x{137F}]+)(.*)$/sDu";
